--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -2,7 +2,7 @@ body {
     background-color: #ffe6e6;
 }
 
-.verticalLine {
+.dashedVerticalDivider {
     border-left: 2px dashed lightblue !important;
 }
 
@@ -21,3 +21,21 @@ body {
     40%  {border-width: 4px; border-color: red;}
     80%   {border-width: 3px; border-color: grey;}
 }
+
+/* YouTube-related */
+/* TODO: fix videowrapper/iframe display issues
+/*.videoWrapper {*/
+/*    width: 100%;*/
+/*    position: relative;*/
+/*    padding-bottom: 56.25%;*/
+/*    padding-top: 25px;*/
+/*    height: 0;*/
+/*}*/
+
+/*.videoWrapper iframe {*/
+/*    position: absolute;*/
+/*    top: 0;*/
+/*    left: 0;*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*}*/
