Add display of number of post comments on viewPost.jsp. Add display of time elapsed since comment left on viewPost.jsp

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -22,6 +22,11 @@ body {
     80%   {border-width: 3px; border-color: grey;}
 }
 
+.userIcon {
+    width: 64px;
+    height: 64px;
+}
+
 /* YouTube-related */
 /* TODO: fix videowrapper/iframe display issues
 /*.videoWrapper {*/
