--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,20 +1,20 @@
+/* Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700;900&display=swap');/* End imports */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+/* End imports */
+
+
+
+/* Main page content/structure */
 html, body {
     background-color: #ffe6e6;
-}
-
-h2 {
-    color: white;
-    text-shadow: 1px 1px 3px black;
-}
-
-h1, h2, h3, h4, h5, h6 {
-    text-shadow: 1px 1px 4px darkgrey;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .contentBody {
     min-height: 100%;
     /* footer height */
-    margin-bottom: -20px;
+    margin-bottom: -25px;
 }
 
 .contentBody:after {
@@ -23,37 +23,37 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 footer, .contentBody:after {
-    height: 20px;
+    height: 25px;
 }
 
 footer {
-    border-top: 10px solid grey;
+    margin-top: 3em;
+    border-top: 3px solid black;
     color: white;
-
     background-color: #874c62;
 }
 
+/* Headings */
 
-
-
-.dashedVerticalDivider {
-    border-left: 2px dashed lightblue !important;
+.titleHeading {
+    text-shadow: 1px 1px 3px grey;
+    color: #874c62;
 }
 
-#errorMessage {
-    padding: 4px;
-    border: 2px solid grey;
-    background-color: #E3E9EF;
-    animation-name: errorMessageColors;
-    animation-duration: .25s;
-    animation-iteration-count: 9;
-    animation-timing-function: ease-in-out;
+.titleHeading .boldHeadingSpan {
+    font-size: 1.1em;
+    font-weight: 900
 }
 
-@keyframes errorMessageColors { /* short animation of error message border */
-    0%   {border-width: 3px; border-color: grey;}
-    40%  {border-width: 4px; border-color: red;}
-    80%   {border-width: 3px; border-color: grey;}
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Playfair Display', serif;
+    font-weight: 400;
+    text-shadow: 1px 1px 4px darkgrey;
+}
+
+/* Links */
+a {
+    text-decoration: none !important;
 }
 
 /* User */
@@ -93,3 +93,24 @@ footer {
 /*    width: 100%;*/
 /*    height: 100%;*/
 /*}*/
+
+/* Misc */
+.dashedVerticalDivider {
+    border-left: 2px dashed lightblue !important;
+}
+
+#errorMessage {
+    padding: 4px;
+    border: 2px solid grey;
+    background-color: #E3E9EF;
+    animation-name: errorMessageColors;
+    animation-duration: .25s;
+    animation-iteration-count: 9;
+    animation-timing-function: ease-in-out;
+}
+
+@keyframes errorMessageColors { /* short animation of error message border */
+    0%   {border-width: 3px; border-color: grey;}
+    40%  {border-width: 4px; border-color: red;}
+    80%   {border-width: 3px; border-color: grey;}
+}
