--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -46,9 +46,8 @@ footer {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Playfair Display', serif;
     font-weight: 400;
-    text-shadow: 1px 1px 4px darkgrey;
+    text-shadow: 1px 1px 2px grey;
 }
 
 /* Links */
@@ -74,6 +73,11 @@ a {
 
 .postTitleText {
     font-size: 1.25em;
+}
+
+.tableThumbnail {
+    width: 120px;
+    height: 90px;
 }
 
 /* YouTube */
